--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +55,7 @@
             z-index: 1;
         }
         .minute {
-            width: 5px;
+            width: 5px;type="text/javascript" 
             height: 34%;
             background-color: black;
             z-index: 2;
@@ -78,6 +78,6 @@
         <div class="hand minute"></div>
         <div class="hand second"></div>
     </div>
-    <script type="text/javascript" src="clock.js"></script>
+    <script src="clock.js"></script>
 </body>
 </html>
